// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story: additionalAttributes 1`] = `
<a
  data-additional="test"
  href="mailto:vasyl@example.com?&_c=1234567890"
>
  Contact us
</a>
`;

exports[`Story: basicConfig 1`] = `
<a
  href="mailto:vasyl@example.com?subject=Some%20email%20subject&body=This%20is%20the%20body%20of%20your%20message%0AMultilined%20also&_c=1234567890"
>
  Email us
</a>
`;

exports[`Story: customStyles 1`] = `
<a
  href="mailto:vasyl@example.com?&_c=1234567890"
  style={
    {
      "border": "1px #000 solid",
    }
  }
>
  Contact us
</a>
`;

exports[`Story: maximumConfig 1`] = `
<a
  href=""
  onClick={[Function]}
>
  Email us
</a>
`;
